--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Bienvenido a la App</h2>
+    <h2>Bienvenido a la App aca va tyu angular</h2>
 </body>
 </html>
